openplatform/externelservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcdservice
  namespace: openplatform
spec:
  ports:
    - name: http
      port: 12379
      protocol: TCP
      targetPort: 12379
  sessionAffinity: None
  type: ExternalName
  externalName: storageservice.storageplatform.svc.cluster.local
