openplatform/openplatform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgateway
  namespace: openplatform
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30003
  selector:
    app: opengateway
