openplatform/openplatform-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openplatform-web-gateway
  namespace: openplatform
spec:
  rules:
    - host: open.platform.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: webgateway
                port:
                  number: 8000
